--- a/source/.vscode/settings.json
+++ b/source/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "restructuredtext.confPath": "e:\\ZhaojiediProject\\github\\My_Study_Python\\source"
+    "restructuredtext.confPath": "e:\\ZhaojiediProject\\github\\My_Study_Python\\source",
+    "restructuredtext.workspaceRoot": "e:\\ZhaojiediProject\\github\\My_Study_Python\\source"
 }
