--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,4 +26,4 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: source/requirements.txt
+   - requirements: requirements.txt
